--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
                                 <th style="width: 13%; vertical-align: middle;" scope="col">Bulan</th>
                                 <th style="width: 50%" scope="col">Nama Kegiatan</th>
                                 <th style="width: 15%" scope="col">Tanggal Pelaksanaan</th>
+                                <th style="width: 15%" scope="col">Keterangan</th>
                                 <th scope="col">P I C</th>
                             </tr>
                         </thead>
@@ -195,11 +196,13 @@
                                 <td>{{flash.tgl}}</td>
                                 <td>{{flash.permasalahan}}</td>
                                 <td>{{flash.isu}}</td>
+                                <td>{{flash.upaya}}</td>
                                 <td>
                                     <button class="btn btn-sm btn-outline-primary">
                                         {{flash.seksi}}
                                     </button>
                                 </td>
+
 
 
                             </tr>
